@@ -21,6 +21,8 @@ use Test2::Util::HashBase qw{
     ipc stack formatter
     contexts
 
+    -preload
+
     ipc_shm_size
     ipc_shm_last
     ipc_shm_id
@@ -38,8 +40,8 @@ use Test2::Util::HashBase qw{
 
 sub DEFAULT_IPC_TIMEOUT() { 30 }
 
-sub pid { $_[0]->{+_PID} ||= $$ }
-sub tid { $_[0]->{+_TID} ||= get_tid() }
+sub pid { $_[0]->{+_PID} }
+sub tid { $_[0]->{+_TID} }
 
 # Wrap around the getters that should call _finalize.
 BEGIN {
@@ -66,6 +68,26 @@ sub import {
 
 sub init { $_[0]->reset }
 
+sub start_preload {
+    my $self = shift;
+
+    confess "preload cannot be started, Test2::API has already been initialized"
+        if $self->{+FINALIZED} || $self->{+LOADED};
+
+    return $self->{+PRELOAD} = 1;
+}
+
+sub stop_preload {
+    my $self = shift;
+
+    return 0 unless $self->{+PRELOAD};
+    $self->{+PRELOAD} = 0;
+
+    $self->post_preload_reset();
+
+    return 1;
+}
+
 sub post_preload_reset {
     my $self = shift;
 
@@ -83,7 +105,7 @@ sub post_preload_reset {
 
     $self->{+LOADED} = 0;
 
-    $self->{+STACK} = Test2::API::Stack->new;
+    $self->{+STACK} ||= Test2::API::Stack->new;
 }
 
 sub reset {
@@ -121,6 +143,9 @@ sub _finalize {
     my $self = shift;
     my ($caller) = @_;
     $caller ||= [caller(1)];
+
+    confess "Attempt to initialize Test2::API during preload"
+        if $self->{+PRELOAD};
 
     $self->{+FINALIZED} = $caller;
 
@@ -252,6 +277,9 @@ sub add_post_load_callback {
 sub load {
     my $self = shift;
     unless ($self->{+LOADED}) {
+        confess "Attempt to initialize Test2::API during preload"
+            if $self->{+PRELOAD};
+
         $self->{+_PID} = $$        unless defined $self->{+_PID};
         $self->{+_TID} = get_tid() unless defined $self->{+_TID};
 
@@ -450,6 +478,8 @@ sub _ipc_wait {
 sub DESTROY {
     my $self = shift;
 
+    return if $self->{+PRELOAD};
+
     return unless defined($self->{+_PID}) && $self->{+_PID} == $$;
     return unless defined($self->{+_TID}) && $self->{+_TID} == get_tid();
 
@@ -459,6 +489,8 @@ sub DESTROY {
 
 sub set_exit {
     my $self = shift;
+
+    return if $self->{+PRELOAD};
 
     my $exit     = $?;
     my $new_exit = $exit;
